# zerosearch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: README.md  compare_before_after.py  simplewiki_benchmark.py
benchmarks/results/: baseline.json  baseline_10000.json  baseline_10000_100k_queries.json  compare_before_after.json  compare_before_after_100k_queries.json  final.json  final_10000.json  final_10000_100k_queries.json
tests/: test_index.py  test_serialization.py
zerosearch/: __init__.py  index.py
